clean up text align issue

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -97,7 +97,6 @@ p {
   font-size: 2em;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  text-align: center;
 }
 
 
